src/index.css
div .container, html, body {
    height: 100%;
    margin: 0;
    font-family: sans-serif, 'Roboto Slab', serif;
}

div .container {
    background-color: whitesmoke;
    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: center;
    align-items: center;
}

@media (max-width: 768px) {
    div .container {
        display: flex;
        flex-direction: column;
    }
}

div .box {
    height: 100px;
    width: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;    
}

div .box button {
    height: 100px;
    width: 100px;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;    
    font-size: larger;
}

div .box label {
    height: 100px;
    width: 100px;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;    
    font-size: xx-large;
    color: white;
}

div .boxPos {
    background-color: #8BC34A;
}

div .boxNeg {
    background-color: rgb(236, 20, 67);
}

